--- a/index.html
+++ b/index.html
@@ -1,360 +1,121 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=gb2312">
-	<style>
-		body{margin:0;padding:0;overflow: hidden;}
-		.city{width:100%;position:fixed;bottom: 0px;z-index: 100;}
-		.city img{width: 100%;}
-	</style>
-	<title>html5夜景放烟花绽放动画效果</title>
+    <meta charset="UTF-8">
+    <title>许愿引导页</title>
+    <meta name="chenc" content="Runoob">
+    <meta name="description" content="许愿引导页">
+    <meta name="keywords" content="许愿">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="Robots" contect="all">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body onselectstart = "return false">
+	<body>
+		<div class="container"><!-- 主体开始 -->
+			<div class="hander"><!-- 导航开始 -->
+				<nav id="nav-menu">
+					<a href="#" data-rel="home-me-section" class="active">首页</a>
+					<a href="#" data-rel="about-exp-section">关于</a>
+					<a href="#" data-rel="course-exp-section">历程</a>
+					<a href="#" data-rel="website-exp-section">站点</a>
+					</nav>
+				</div><!-- 导航结束 -->
+			<div class="content"><!-- 内容开始 -->
+				<section class="home-me-section active-section"><!-- 首页开始 -->
+					<div class="main"><!-- 首页内容 -->
+						<img src="img/bgo.jpg" class="bgo" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=1045967674&s=640" class="ato" onclick="alert('戳我干嘛 ￣へ￣')" />
+						<div class="name" onclick="javascript:this.innerHTML=(this.innerHTML=='许愿'?'ColaYun':'许愿');">许愿</div>
+						<div class="motto" onclick="javascript:this.innerHTML=(this.innerHTML=='心存敬畏 行有所止'?'Be in awe and stop':'心存敬畏 行有所止');">心存敬畏 行有所止</div>
+						<div class="navo">
+							<ul>
+								<li><a href="https://wpa.qq.com/msgrd?v=3&uin=1045967674&site=qq&menu=yes" target="_blank"><i class="fab fa-qq"></i></a></li><!-- QQ -->
+								<li><a href="index.html#" target="_blank"><i class="fab fa-weibo"></i></a></li><!-- 微博 -->
+								<li><a href="index.html#" target="_blank"><i class="fab fa-twitter"></i></a></li><!-- twitter -->
+								<li><a href="index.html#" target="_blank"><i class="fab fa-github"></i></a></li><!-- github -->
+								<li><a href="https://baidu.com" target="_blank"><i class="fas fa-paw"></i></a></li><!-- 百度 -->
+								<li><a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=-Z6SkZyEiJO9jIzTnpKQ" target="_blank"><i class="fas fa-envelope"></i></a></li><!-- 邮箱 -->
+							</ul>
+						</div>
+					</div><!-- 首页内容结束 -->
+					</section><!-- 首页结束 -->
+				<section class="about-exp-section"><!-- 关于开始 -->
+					<div class="main"><!-- 关于内容 -->
+						<img src="img/bgt.jpg" class="bgt" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=1045967674&s=640" class="ats" />
+						<div class="about">
+							<p>>_酷爱前端开发，会去自学感兴趣的一切东西
+							<br>>_略懂H5，php，喜欢折腾，努力去解决遇到的一切问题
+							</p>
+						</div>
+						<div class="about" style="margin-top:20px;">
+						    <p>希望与大家一起交流学习
+							<br>这条路我才刚刚迈开了我的第一步
+							<br>路上的坎一定会非常多，但在我眼里
+							<br>没有什么问题是尝试不能解决的，
+							<br>即使前方的路看似绝境，也要有硬生生给自己开出一条路的勇气</p>
+						</div>
+					</div><!-- 关于内容结束 -->
+					</section><!-- 关于结束 -->
+				<section class="course-exp-section"><!-- 历程开始 -->
+					<div class="main"><!-- 历程内容 -->
+						<img src="img/bgt.jpg" class="bgt" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=1045967674&s=640" class="ats" />
+						<div class="box">
+							<div id="boxs">
+								<div class="track-list"><!-- 时间轴开始 -->
+								<ul>
+									<li>
+										<i class="node-icon"><img src="img/tbl.svg"></i>
+										<span class="time" style="color:#2ECC71">2022-4-28</span>
+										<span class="txt" style="color:#2ECC71">搭建</span>
+									</li>
+								</ul>
+							<!-- 时间轴结束 -->
+						</div>
+					</div>
+					<!-- <div style="color:#aaa;text-align:center;font-size:12px">注: 上下滑动查看历史进程</div>	-->
+					</div>
+					</div><!-- 历程内容结束 -->
+				</section><!-- 历程结束 -->
+					
 
-<div style="height:700px;overflow:hidden;">
-
-	<canvas id='cas' style="background-color:rgba(0,5,24,1);">浏览器不支持canvas</canvas>
-	<div class="city"><img src="img/city.png" alt="" /></div>
-	<img src="img/moon.png" alt="" id="moon" style="visibility: hidden;"/>
-	<div style="display:none">
-		<div class="shape">新年快乐</div>
-		<div class="shape">合家幸福</div>
-        <div class="shape">万事如意</div>
-        <div class="shape">心想事成</div>
-        <div class="shape">财源广进</div>
-	</div>
-	
-</div>
-	
-	<script>
-		var canvas = document.getElementById("cas");
-		var ocas = document.createElement("canvas");
-		var octx = ocas.getContext("2d");
-		var ctx = canvas.getContext("2d");
-		ocas.width = canvas.width = window.innerWidth;
-		ocas.height = canvas.height = 700;
-		var bigbooms = [];
-	
-		window.onload = function(){
-			initAnimate()
-		}
-
-		function initAnimate(){
-			drawBg();
-
-			lastTime = new Date();
-			animate();
-		}
-
-		var lastTime;
-		function animate(){
-			ctx.save();
-			ctx.fillStyle = "rgba(0,5,24,0.1)";
-			ctx.fillRect(0,0,canvas.width,canvas.height);
-			ctx.restore();
-
-
-			var newTime = new Date();
-            if(newTime-lastTime>500+(window.innerHeight-767)/2){
-				var random = Math.random()*100>2?true:false;
-				var x = getRandom(canvas.width/5 , canvas.width*4/5);
-				var y = getRandom(50 , 200);
-				if(random){
-					var bigboom = new Boom(getRandom(canvas.width/3,canvas.width*2/3) ,2,"#FFF" , {x:x , y:y});
-					bigbooms.push(bigboom)
-				}
-				else {
-					var bigboom = new Boom(getRandom(canvas.width/3,canvas.width*2/3) ,2,"#FFF" , {x:canvas.width/2 , y:200} , document.querySelectorAll(".shape")[parseInt(getRandom(0, document.querySelectorAll(".shape").length))]);
-					bigbooms.push(bigboom)
-				}
-				lastTime = newTime;
-				console.log(bigbooms)
-			}
-
-			stars.foreach(function(){
-				this.paint();
+				<section class="website-exp-section"><!-- 站点开始 -->
+					<div class="main"><!-- 站点内容开始 -->
+						<img src="img/bgt.jpg" class="bgt" />
+						<img src="https://q1.qlogo.cn/g?b=qq&nk=1045967674&s=640" class="ats" />
+							<div class="box">
+							<div id="boxs">
+						<a href="https://qm.qq.com/cgi-bin/qm/qr?k=v9wbtsi3FuBEtzT6IrQzH6WDASJo-o0z&noverify=0&personal_qrcode_source=3" target="_blank"><div class="web">我的主页</div></a>
+						<!-- 站点一 -->
+						<div class="web" onclick="alert('敬请期待')">敬请期待</div>
+						<div class="tips">所有站点均正常运行</div>
+						</div><!-- 站点内容结束 -->
+					</section><!-- 站点结束 -->
+				</div><!-- 内容结束 -->
+			</div><!-- 主体结束 -->
+		<div class="footer"><!-- 底部版权 -->
+		<span id="sitetime"></span><!-- 运行时间 -->
+        <a href="http://www.xuyuany.cn/" target="_blank"><div class="web"><img src="./img/beian.png" style="height: 1em;">推荐互联：许愿</div></a>
+        </div><!-- 版权结束 -->
+		<div id="tp-weather-widget"></div><!-- 天气插件 -->
+		<script>
+			(function(a,h,g,f,e,d,c,b){b=function(){d=h.createElement(g);c=h.getElementsByTagName(g)[0];d.src=e;d.charset="utf-8";d.async=1;c.parentNode.insertBefore(d,c)};a["SeniverseWeatherWidgetObject"]=f;a[f]||(a[f]=function(){(a[f].q=a[f].q||[]).push(arguments)});a[f].l=+new Date();if(a.attachEvent){a.attachEvent("onload",b)}else{a.addEventListener("load",b,false)}}(window,document,"script","SeniverseWeatherWidget","//cdn.sencdn.com/widget2/static/js/bundle.js?t="+parseInt((new Date().getTime() / 100000000).toString(),10)));
+			window.SeniverseWeatherWidget('show', {
+			flavor: "bubble",
+			location: "WX4FBXXFKE4F",
+			geolocation: true,
+			language: "zh-Hans",
+			unit: "c",
+			theme: "auto",
+			token: "ac1d036a-99f3-4f88-ae98-f795bb93a9f0",
+			hover: "disabled",
+			container: "tp-weather-widget"
 			})
-
-			drawMoon();
-
-			bigbooms.foreach(function(index){
-				var that = this;
-				if(!this.dead){
-					this._move();
-					this._drawLight();
-				}
-				else{
-					this.booms.foreach(function(index){
-						if(!this.dead) {
-							this.moveTo(index);
-						}
-						else if(index === that.booms.length-1){
-							bigbooms[bigbooms.indexOf(that)] = null;
-						}
-					})
-				}
-			});
-			
-			raf(animate);
-		}
-
-		function drawMoon(){
-			var moon = document.getElementById("moon");
-			var centerX = canvas.width-200 , centerY = 100 , width = 80;
-			if(moon.complete){
-				ctx.drawImage(moon , centerX , centerY , width , width )
-			}
-			else {
-				moon.onload = function(){
-					ctx.drawImage(moon ,centerX , centerY , width , width)
-				}
-			}
-			var index = 0;
-			for(var i=0;i<10;i++){
-				ctx.save();
-				ctx.beginPath();
-				ctx.arc(centerX+width/2 , centerY+width/2 , width/2+index , 0 , 2*Math.PI);
-				ctx.fillStyle="rgba(240,219,120,0.005)";
-				index+=2;
-				ctx.fill();
-				ctx.restore();
-			}
-			
-		}
-
-		Array.prototype.foreach = function(callback){
-			for(var i=0;i<this.length;i++){
-				if(this[i]!==null) callback.apply(this[i] , [i])
-			}
-		}
-
-		var raf = window.requestAnimationFrame || window.webkitRequestAnimationFrame || window.mozRequestAnimationFrame || window.oRequestAnimationFrame || window.msRequestAnimationFrame || function (callback) { window.setTimeout(callback, 1000 / 60); };
- 		
-		canvas.onclick = function(){
-			var x = event.clientX;
-			var y = event.clientY;
-			var bigboom = new Boom(getRandom(canvas.width/3,canvas.width*2/3) ,2,"#FFF" , {x:x , y:y});
-			bigbooms.push(bigboom)
-		}
-
-		// canvas.addEventLisener("touchstart" , function(event){
-		// 	var touch = event.targetTouches[0];
-		// 	var x = event.pageX;
-		// 	var y = event.pageY;
-		// 	var bigboom = new Boom(getRandom(canvas.width/3,canvas.width*2/3) ,2,"#FFF" , {x:x , y:y});
-		// 	bigbooms.push(bigboom)
-		// })
-
-		var Boom = function(x,r,c,boomArea,shape){
-			this.booms = [];
-			this.x = x;
-			this.y = (canvas.height+r);
-			this.r = r;
-			this.c = c;
-			this.shape = shape || false;
-			this.boomArea = boomArea;
-			this.theta = 0;
-			this.dead = false;
-			this.ba = parseInt(getRandom(80 , 200));
-		}
-		Boom.prototype = {
-			_paint:function(){
-				ctx.save();
-				ctx.beginPath();
-				ctx.arc(this.x,this.y,this.r,0,2*Math.PI);
-				ctx.fillStyle = this.c;
-				ctx.fill();
-				ctx.restore();
-			},
-			_move:function(){
-				var dx = this.boomArea.x - this.x , dy = this.boomArea.y - this.y;
-				this.x = this.x+dx*0.01;
-				this.y = this.y+dy*0.01;
-
-				if(Math.abs(dx)<=this.ba && Math.abs(dy)<=this.ba){
-					if(this.shape){
-						this._shapBoom();
-					}
-					else this._boom();
-					this.dead = true;
-				}
-				else {
-					this._paint();
-				}
-			},
-			_drawLight:function(){
-				ctx.save();
-				ctx.fillStyle = "rgba(255,228,150,0.3)";
-				ctx.beginPath();
-				ctx.arc(this.x , this.y , this.r+3*Math.random()+1 , 0 , 2*Math.PI);
-				ctx.fill();
-				ctx.restore();
-			},
-			_boom:function(){
-				var fragNum = getRandom(30 , 200);
-				var style = getRandom(0,10)>=5? 1 : 2;
-				var color;
-				if(style===1){
-					color = {
-						a:parseInt(getRandom(128,255)),
-						b:parseInt(getRandom(128,255)),
-						c:parseInt(getRandom(128,255))
-					}
-				}
-
-				var fanwei = parseInt(getRandom(300, 400));
-				for(var i=0;i<fragNum;i++){
-					if(style===2){
-						color = {
-							a:parseInt(getRandom(128,255)),
-							b:parseInt(getRandom(128,255)),
-							c:parseInt(getRandom(128,255))
-						}
-					}
-					var a = getRandom(-Math.PI, Math.PI);
-					var x = getRandom(0, fanwei) * Math.cos(a) + this.x;
-					var y = getRandom(0, fanwei) * Math.sin(a) + this.y; 
-					var radius = getRandom(0 , 2)
-					var frag = new Frag(this.x , this.y , radius , color , x , y );
-					this.booms.push(frag);
-				}
-			},
-			_shapBoom:function(){
-				var that = this;
-				putValue(ocas , octx , this.shape , 5, function(dots){
-					var dx = canvas.width/2-that.x;
-					var dy = canvas.height/2-that.y;
-					for(var i=0;i<dots.length;i++){
-						color = {a:dots[i].a,b:dots[i].b,c:dots[i].c}
-						var x = dots[i].x;
-						var y = dots[i].y;
-						var radius = 1;
-						var frag = new Frag(that.x , that.y , radius , color , x-dx , y-dy);
-						that.booms.push(frag);
-					}
-				})
-			}
-		}
-
-		function putValue(canvas , context , ele , dr , callback){
-			context.clearRect(0,0,canvas.width,canvas.height);
-			var img = new Image();
-			if(ele.innerHTML.indexOf("img")>=0){
-				img.src = ele.getElementsByTagName("img")[0].src;
-				imgload(img , function(){
-					context.drawImage(img , canvas.width/2 - img.width/2 , canvas.height/2 - img.width/2);
-					dots = getimgData(canvas , context , dr);
-					callback(dots);
-				})
-			}
-			else {
-				var text = ele.innerHTML;
-				context.save();
-				var fontSize =200;
-				context.font = fontSize+"px 宋体 bold";
-				context.textAlign = "center";
-				context.textBaseline = "middle";
-				context.fillStyle = "rgba("+parseInt(getRandom(128,255))+","+parseInt(getRandom(128,255))+","+parseInt(getRandom(128,255))+" , 1)";
-				context.fillText(text , canvas.width/2 , canvas.height/2);
-				context.restore();
-				dots = getimgData(canvas , context , dr);
-				callback(dots);
-			}
-		}
-
-		function imgload(img , callback){
-			if(img.complete){
-				callback.call(img);
-			}
-			else {
-				img.onload = function(){
-					callback.call(this);
-				}
-			}
-		}
-
-		function getimgData(canvas , context , dr){
-			var imgData = context.getImageData(0,0,canvas.width , canvas.height);
-			context.clearRect(0,0,canvas.width , canvas.height);
-			var dots = [];
-			for(var x=0;x<imgData.width;x+=dr){
-				for(var y=0;y<imgData.height;y+=dr){
-					var i = (y*imgData.width + x)*4;
-					if(imgData.data[i+3] > 128){
-						var dot = {x:x , y:y , a:imgData.data[i] , b:imgData.data[i+1] , c:imgData.data[i+2]};
-						dots.push(dot);
-					}
-				}
-			}
-			return dots;
-		}
-
-		function getRandom(a , b){
-			return Math.random()*(b-a)+a;
-		}
-
-
-		var maxRadius = 1 , stars=[];
-		function drawBg(){
-			for(var i=0;i<100;i++){
-				var r = Math.random()*maxRadius;
-				var x = Math.random()*canvas.width;
-				var y = Math.random()*2*canvas.height - canvas.height;
-				var star = new Star(x , y , r);
-				stars.push(star);
-				star.paint()
-			}
-
-		}
-
-		var Star = function(x,y,r){
-			this.x = x;this.y=y;this.r=r;
-		}
-		Star.prototype = {
-			paint:function(){
-				ctx.save();
-				ctx.beginPath();
-				ctx.arc(this.x , this.y , this.r , 0 , 2*Math.PI);
-				ctx.fillStyle = "rgba(255,255,255,"+this.r+")";
-				ctx.fill();
-				ctx.restore();
-			}
-		}
-
-		var focallength = 250;
-		var Frag = function(centerX , centerY , radius , color ,tx , ty){
-			this.tx = tx;
-			this.ty = ty;
-			this.x = centerX;
-			this.y = centerY;
-			this.dead = false;
-			this.centerX = centerX;
-			this.centerY = centerY;
-			this.radius = radius;
-			this.color = color;
-		}
-
-		Frag.prototype = {
-			paint:function(){
-				ctx.save();
-				ctx.beginPath();
-				ctx.arc(this.x , this.y , this.radius , 0 , 2*Math.PI);
-				ctx.fillStyle = "rgba("+this.color.a+","+this.color.b+","+this.color.c+",1)";
-				ctx.fill()
-				ctx.restore();
-			},
-			moveTo:function(index){
-				this.ty = this.ty+0.3;
-				var dx = this.tx - this.x , dy = this.ty - this.y;
-				this.x = Math.abs(dx)<0.1 ? this.tx : (this.x+dx*0.1);
-				this.y = Math.abs(dy)<0.1 ? this.ty : (this.y+dy*0.1);
-				if(dx===0 && Math.abs(dy)<=80){
-					this.dead = true;
-				}
-				this.paint();
-			}
-		}
-	</script>
-
-</body>
+		</script><!-- 天气插件结束 -->
+		<script src="./js/index.js"></script><!-- 核心插件 -->
+		<script src="./js/all.js"></script><!-- 图标库 -->
+		<script src="./js/Sitetime.js"></script><!-- 运行时间 -->
+		<script src="./js/Mouse.js"></script><!-- 点击烟花特效 -->
+	</body>
 </html>
